--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+
+    <color name="navy">#032a4d</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_blue">#C3DCF4</color>
+    <color name="medium_blue">#67a6e0</color>
+    <color name="dark_blue">#247bc7</color>
+    <color name="light_orange">#f5b531</color>
+    <color name="dark_orange">#ff9431</color>
+
 </resources>
