--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_blue">#C3DCF4</color>
     <color name="medium_blue">#67a6e0</color>
-    <color name="dark_blue">#247bc7</color>
+    <color name="dark_blue">#1468B1</color>
     <color name="light_orange">#f5b531</color>
     <color name="dark_orange">#ff9431</color>
 
