--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimary</item>
         <item name="android:textColor">@color/navy</item>
+        <item name="android:windowLightStatusBar">true</item>
 
-
+        <item name="android:colorPrimaryDark">@color/light_xl_blue</item>
     </style>
 </resources>
