--- a/app/src/main/res/drawable/bg_solid.xml
+++ b/app/src/main/res/drawable/bg_solid.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-        <gradient android:startColor="@color/light_blue"
-            android:endColor="@color/dark_blue"
-            android:angle="180"/>
+        <solid android:color="@color/medium_blue"/>
         <corners android:radius="48dp"/>
     </shape>
