--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="light_navy">#023461</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_blue">#e8f3fa</color>
-    <color name="light_xl_blue">#C4DAE9</color>
+    <color name="light_xl_blue">#c1e8ff</color>
     <color name="medium_blue">#67a6e0</color>
     <color name="dark_blue">#1468B1</color>
     <color name="light_orange">#f5b531</color>
