--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -422,8 +422,7 @@
                     android:id="@+id/text_tempUnits"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="0dp"
-                    android:text="C"
+                    android:text="°C"
                     android:textColor="@color/light_xl_blue"
                     android:textSize="40sp"
                     android:textStyle="bold"
