--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,12 +3,12 @@
     <style name="Theme.MyWeatherApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/navy</item>
-        <item name="colorOnPrimary">@color/dark_blue</item>
+        <item name="colorOnPrimary">@color/medium_blue</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/light_blue</item>
         <item name="colorOnSecondary">@color/medium_blue</item>
 
-        <!-- Status bar color. -->
+
         <item name="android:statusBarColor">?attr/colorPrimary</item>
 
         <item name="android:textColor">@color/light_blue</item>
@@ -16,5 +16,34 @@
 
         <item name="android:colorPrimaryDark">@color/light_navy</item>
 
+        <item name="android:datePickerDialogTheme">@style/MyDatePickerDialogTheme</item>
+
+
+    </style>
+    <style name="MyDatePickerDialogTheme" parent="android:Theme.Material.Dialog">
+        <item name="android:datePickerStyle">@style/MyDatePickerStyle</item>
+        <item name="android:colorControlActivated">@color/dark_orange</item>
+        <item name="android:textColorPrimaryInverse">@color/white</item>
+        <item name="android:windowBackground">@color/navy</item>
+
+
+    </style>
+
+    <style name="MyDatePickerStyle" parent="@android:style/Widget.Material.DatePicker">
+        <item name="android:headerBackground">@color/dark_blue</item>     <!-- on primary. -->
+        <item name="android:dayOfWeekTextAppearance">@color/light_blue</item>     <!-- secondary. -->
+        <item name="android:headerMonthTextAppearance">@color/light_blue</item>
+        <item name="android:headerDayOfMonthTextAppearance">@color/light_blue</item>
+        <item name="android:headerYearTextAppearance">@color/light_blue</item>
+        <item name="android:yearListSelectorColor">@color/light_blue</item>
+        <item name="android:calendarTextColor">@color/light_blue</item>
+
+
+
+    </style>
+    <style name="MyTimePickerDialogTheme" parent="@style/Theme.AppCompat.Light.Dialog">
+        <item name="android:textColor">@color/dark_blue</item>
+        <item name="colorAccent">@color/dark_blue</item>
+        <item name="android:windowBackground">@color/navy</item>
     </style>
 </resources>
