--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="navy">#032a4d</color>
     <color name="light_navy">#023461</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="light_blue">#e8f3fa</color>
+    <color name="light_blue">#CAE1EF</color>
     <color name="light_xl_blue">#c1e8ff</color>
     <color name="medium_blue">#67a6e0</color>
     <color name="dark_blue">#1468B1</color>
