--- a/app/src/main/res/layout/fragment_on_boarding2.xml
+++ b/app/src/main/res/layout/fragment_on_boarding2.xml
@@ -9,7 +9,7 @@
 
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/finish"
+        android:id="@+id/next2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
 
@@ -17,7 +17,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/gradient_button_o"
-        android:text="@string/finish"
+        android:text="@string/next"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
