--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -16,8 +16,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="80dp"
-            android:text="SETTINGS" />
+            android:text="SETTINGS"
+            android:textSize="80dp" />
 
     </FrameLayout>
 </layout>
