--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyWeatherApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MyWeatherApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/light_blue</item>
         <item name="colorOnPrimary">@color/medium_blue</item>
@@ -13,5 +13,36 @@
         <item name="android:windowLightStatusBar">true</item>
 
         <item name="android:colorPrimaryDark">@color/light_xl_blue</item>
+
+        <item name="android:datePickerDialogTheme">@style/MyDatePickerDialogTheme</item>
+
+
     </style>
+    <style name="MyDatePickerDialogTheme" parent="android:Theme.Material.Light.Dialog">
+        <item name="android:datePickerStyle">@style/MyDatePickerStyle</item>
+        <item name="android:colorControlActivated">@color/dark_orange</item>
+        <item name="android:textColorPrimaryInverse">@color/white</item>
+        <item name="android:windowBackground">@color/light_xl_blue</item>
+
+
+    </style>
+
+    <style name="MyDatePickerStyle" parent="@android:style/Widget.Material.Light.DatePicker">
+        <item name="android:headerBackground">@color/dark_blue</item>     <!-- on primary. -->
+        <item name="android:dayOfWeekTextAppearance">@color/navy</item>     <!-- secondary. -->
+        <item name="android:headerMonthTextAppearance">@color/light_blue</item>
+        <item name="android:headerDayOfMonthTextAppearance">@color/light_blue</item>
+        <item name="android:headerYearTextAppearance">@color/light_blue</item>
+        <item name="android:yearListSelectorColor">@color/navy</item>
+        <item name="android:calendarTextColor">@color/navy</item>
+
+
+
+    </style>
+    <style name="MyTimePickerDialogTheme" parent="@style/Theme.AppCompat.Light.Dialog">
+        <item name="android:textColor">@color/dark_blue</item>
+        <item name="colorAccent">@color/dark_blue</item>
+        <item name="android:windowBackground">@color/light_xl_blue</item>
+    </style>
+
 </resources>
