--- a/app/src/main/res/layout/add_alert_dialog.xml
+++ b/app/src/main/res/layout/add_alert_dialog.xml
@@ -16,6 +16,16 @@
         app:cardElevation="15dp"
         app:cardUseCompatPadding="true">
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="22dp"
+            android:text="@string/add_alert"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
         <ImageView
             android:id="@+id/iv_close"
             android:layout_width="35dp"
@@ -336,7 +346,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/gradient_button_o"
-                android:text="@string/add_alert"
+                android:text="@string/add"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
 
