--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,7 @@
             android:id="@+id/scrollView"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -32,8 +33,9 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/days_recycler"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +46,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="64dp"
                     app:cardCornerRadius="32dp"
@@ -61,11 +64,11 @@
                         android:weightSum="2">
 
                         <LinearLayout
-                            android:layout_marginTop="10dp"
                             android:id="@+id/inner1"
-                            android:layout_marginBottom="10dp"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
                             android:layout_weight="1"
                             android:background="?android:attr/colorPrimaryDark"
                             android:orientation="horizontal"
@@ -83,15 +86,16 @@
                                     android:layout_height="match_parent"
                                     android:orientation="vertical"
                                     android:weightSum="3">
+
                                     <TextView
                                         android:id="@+id/text_pressure"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_weight="1"
-                                        android:textStyle="bold"
                                         android:gravity="center"
                                         android:text="@string/pressure"
-                                        android:textColor="?attr/colorOnSecondary" />
+                                        android:textColor="?attr/colorOnSecondary"
+                                        android:textStyle="bold" />
 
                                     <ImageView
                                         android:id="@+id/image_prssure"
@@ -124,15 +128,16 @@
                                     android:layout_height="match_parent"
                                     android:orientation="vertical"
                                     android:weightSum="3">
+
                                     <TextView
                                         android:id="@+id/text_humadity"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_weight="1"
-                                        android:textStyle="bold"
                                         android:gravity="center"
                                         android:text="@string/humidity"
-                                        android:textColor="?attr/colorOnSecondary" />
+                                        android:textColor="?attr/colorOnSecondary"
+                                        android:textStyle="bold" />
 
                                     <ImageView
                                         android:id="@+id/image_humaidity"
@@ -150,7 +155,6 @@
                                         android:text="93%" />
 
 
-
                                 </LinearLayout>
                             </androidx.cardview.widget.CardView>
 
@@ -165,15 +169,16 @@
                                     android:layout_height="match_parent"
                                     android:orientation="vertical"
                                     android:weightSum="3">
+
                                     <TextView
                                         android:id="@+id/text_wind"
-                                        android:textStyle="bold"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_weight="1"
                                         android:gravity="center"
                                         android:text="@string/wind"
-                                        android:textColor="?attr/colorOnSecondary" />
+                                        android:textColor="?attr/colorOnSecondary"
+                                        android:textStyle="bold" />
 
                                     <ImageView
                                         android:id="@+id/image_wind"
@@ -191,18 +196,17 @@
                                         android:text="93%" />
 
 
-
                                 </LinearLayout>
 
                             </androidx.cardview.widget.CardView>
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_marginBottom="10dp"
-                            android:layout_marginTop="10dp"
                             android:id="@+id/inner2"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
                             android:layout_weight="1"
                             android:background="?android:attr/colorPrimaryDark"
                             android:orientation="horizontal"
@@ -228,10 +232,10 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_weight="1"
-                                        android:textStyle="bold"
                                         android:gravity="center"
                                         android:text="@string/cloud"
-                                        android:textColor="?attr/colorOnSecondary" />
+                                        android:textColor="?attr/colorOnSecondary"
+                                        android:textStyle="bold" />
 
                                     <ImageView
                                         android:id="@+id/image_cloud"
@@ -269,10 +273,10 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_weight="1"
-                                        android:textStyle="bold"
                                         android:gravity="center"
                                         android:text="@string/violet"
-                                        android:textColor="?attr/colorOnSecondary" />
+                                        android:textColor="?attr/colorOnSecondary"
+                                        android:textStyle="bold" />
 
                                     <ImageView
                                         android:id="@+id/image_violet"
@@ -288,7 +292,6 @@
                                         android:layout_weight="1"
                                         android:gravity="center"
                                         android:text="00" />
-
 
 
                                 </LinearLayout>
@@ -307,15 +310,15 @@
                                     android:weightSum="3">
 
                                     <TextView
-                                        android:textStyle="bold"
                                         android:id="@+id/text_visibility"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_weight="1"
-
                                         android:gravity="center"
+
                                         android:text="@string/visibility"
-                                        android:textColor="?attr/colorOnSecondary" />
+                                        android:textColor="?attr/colorOnSecondary"
+                                        android:textStyle="bold" />
 
                                     <ImageView
                                         android:id="@+id/image_visibility"
@@ -333,7 +336,6 @@
                                         android:text="1000m" />
 
 
-
                                 </LinearLayout>
 
                             </androidx.cardview.widget.CardView>
@@ -345,8 +347,9 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/time_recycler"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:orientation="horizontal"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -382,7 +385,8 @@
             android:elevation="10dp"
             android:text="Day, dd month"
             android:textColor="?attr/colorOnPrimary"
-            android:textSize="16sp"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textLocation" />
@@ -409,8 +413,8 @@
 
                 <ImageView
                     android:id="@+id/image_desc"
-                    android:layout_width="130dp"
-                    android:layout_height="115dp"
+                    android:layout_width="140dp"
+                    android:layout_height="160dp"
                     android:layout_marginStart="16dp"
                     android:elevation="40dp"
                     app:layout_constraintBottom_toBottomOf="parent"
