--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="?android:attr/colorPrimary">
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/notif_fab"
             android:layout_width="wrap_content"
@@ -20,6 +21,7 @@
             android:clickable="true"
 
 
+            app:backgroundTint="@color/dark_orange"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/add" />
